--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <!-- Footer -->
     <footer class="text-center bg-secondary text-white py-3">
-        <p>&copy; 2025 ICΩΣΝΙC Mall. All rights reserved.</p>
+        <p>&copy; 2025 GV Mall. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS -->
