--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <!-- Header Section -->
     <header class="bg-dark text-white py-3 text-center">
-        <h1>Welcome to  GV  Mall</h1>
+        <h1>Welcome to  UrbanVista  Mall</h1>
         <p>Your one-stop destination for shopping, dining, and entertainment!</p>
     </header>
 
@@ -156,3 +156,4 @@
     </script>
 </body>
 </html>
+
